[Update] exception of role permisses in token